ES Correction (dansa->danza)

--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -7471,7 +7471,7 @@
       </notes>
       <segment>
         <source>Du vollführst einen Schamanentanz und betest zum Himmel, dass er Regen bringen und diese unselige Zone reinigen möge.</source>
-        <target>Haces una dansa chamánica y cantas al cielo para que libere la lluvia purificadora de espíritus.</target>
+        <target>Haces una danza chamánica y cantas al cielo para que libere la lluvia purificadora de espíritus.</target>
       </segment>
     </unit>
     <unit id="jveYh8O">
