ES Correction (haga->haz)

--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -22062,7 +22062,7 @@
       </notes>
       <segment>
         <source>Klicke hier, um seine Informationen anzuzeigen</source>
-        <target>Haga clic aquí para ver su información</target>
+        <target>Haz clic aquí para ver tu información</target>
       </segment>
     </unit>
     <unit id="vuquyit" name="Ganz genau, das bist du!">
