--- a/translations/game+intl-icu.de.xlf
+++ b/translations/game+intl-icu.de.xlf
@@ -2137,7 +2137,7 @@
     </unit>
     <unit id="hlH9eeR" name="Einwohner">
       <notes>
-        <note category="from">db://CitizenProfession;twig:///templates/ajax/ghost/create_town.html.twig</note>
+        <note category="from">db://CitizenProfession;db://PictoPrototype;twig:///templates/ajax/ghost/create_town.html.twig</note>
       </notes>
       <segment>
         <source>Einwohner</source>
