--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -4949,5 +4949,16 @@
         <target>Los resultados de esta encuesta no están disponibles para los jugadores regulares hasta que termine la encuesta. Puedes ver los resultados actuales ya que eres un Oráculo.</target>
       </segment>
     </unit>
+    <unit id="i4zoKXc" name="Du hast in dieser Stadt zusammen gespielt">
+      <notes>
+        <note category="german">Du hast in dieser Stadt zusammen gespielt</note>
+        <note category="from">twig:///templates/ajax/soul/town_list.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Du hast in dieser Stadt zusammen gespielt</source>
+        <target>Du hast in dieser Stadt zusammen gespielt</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
