--- a/translations/buildings+intl-icu.de.xlf
+++ b/translations/buildings+intl-icu.de.xlf
@@ -3256,7 +3256,7 @@
       </notes>
       <segment>
         <source>Zaun (Baustellen)</source>
-        <target>Zaun (Baustellen)</target>
+        <target>Zaun</target>
       </segment>
     </unit>
     <unit id="R.TLWup">
