--- a/translations/game+intl-icu.de.xlf
+++ b/translations/game+intl-icu.de.xlf
@@ -14389,7 +14389,7 @@
     </unit>
     <unit id="yd0LZz9" name="Diese Bürger is der {role} der Stadt">
       <notes>
-        <note category="from">twig:///templates/ajax/game/town/citizen.html.twig;twig:///templates/ajax/game/town/citizen_omniscience.html.twig</note>
+        <note category="from">twig:///templates/ajax/game/beyond/desert.html.twig;twig:///templates/ajax/game/town/citizen.html.twig;twig:///templates/ajax/game/town/citizen_omniscience.html.twig</note>
       </notes>
       <segment>
         <source>Diese Bürger is der {role} der Stadt</source>
@@ -22023,6 +22023,69 @@
       <segment>
         <source>Anzahl der Tage, die du als Einwohner gespielt hast.</source>
         <target>Anzahl der Tage, die du als Einwohner gespielt hast.</target>
+      </segment>
+    </unit>
+    <unit id="1JTIVJq" name="Standarteinstellung">
+      <notes>
+        <note category="from">twig:///templates/ajax/ghost/create_town.html.twig</note>
+      </notes>
+      <segment>
+        <source>Standarteinstellung</source>
+        <target>Standarteinstellung</target>
+      </segment>
+    </unit>
+    <unit id="8RHVtuo" name="Wählbar">
+      <notes>
+        <note category="from">twig:///templates/ajax/ghost/create_town.html.twig</note>
+      </notes>
+      <segment>
+        <source>Wählbar</source>
+        <target>Wählbar</target>
+      </segment>
+    </unit>
+    <unit id="wx8.nvD" name="Nicht wählbar">
+      <notes>
+        <note category="from">twig:///templates/ajax/ghost/create_town.html.twig</note>
+      </notes>
+      <segment>
+        <source>Nicht wählbar</source>
+        <target>Nicht wählbar</target>
+      </segment>
+    </unit>
+    <unit id="md8_mRV" name="Gebaut">
+      <notes>
+        <note category="from">twig:///templates/ajax/ghost/create_town.html.twig</note>
+      </notes>
+      <segment>
+        <source>Gebaut</source>
+        <target>Gebaut</target>
+      </segment>
+    </unit>
+    <unit id="VWgF34r" name="Baubar">
+      <notes>
+        <note category="from">twig:///templates/ajax/ghost/create_town.html.twig</note>
+      </notes>
+      <segment>
+        <source>Baubar</source>
+        <target>Baubar</target>
+      </segment>
+    </unit>
+    <unit id="4lsUHvx" name="Findbar">
+      <notes>
+        <note category="from">twig:///templates/ajax/ghost/create_town.html.twig</note>
+      </notes>
+      <segment>
+        <source>Findbar</source>
+        <target>Findbar</target>
+      </segment>
+    </unit>
+    <unit id="ifwhezW" name="Deaktiviert">
+      <notes>
+        <note category="from">twig:///templates/ajax/ghost/create_town.html.twig</note>
+      </notes>
+      <segment>
+        <source>Deaktiviert</source>
+        <target>Deaktiviert</target>
       </segment>
     </unit>
   </file>
