--- a/translations/ghost+intl-icu.fr.xlf
+++ b/translations/ghost+intl-icu.fr.xlf
@@ -1851,44 +1851,44 @@
       <notes>
         <note category="german">Üblicherweise werden die verfügbaren Berufe in einer Stadt durch andere Optionen gesteuert, zum Beispiel den Schamanen-Modus. Mit dieser Option kannst du die automatischen Einstellungen ausser Kraft setzen und die Berufe stattdessen manuell ein- oder ausschalten.</note>
         <note category="from">twig:///templates/ajax/ghost/create_town.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Üblicherweise werden die verfügbaren Berufe in einer Stadt durch andere Optionen gesteuert, zum Beispiel den Schamanen-Modus. Mit dieser Option kannst du die automatischen Einstellungen ausser Kraft setzen und die Berufe stattdessen manuell ein- oder ausschalten.</source>
-        <target>Üblicherweise werden die verfügbaren Berufe in einer Stadt durch andere Optionen gesteuert, zum Beispiel den Schamanen-Modus. Mit dieser Option kannst du die automatischen Einstellungen ausser Kraft setzen und die Berufe stattdessen manuell ein- oder ausschalten.</target>
+        <target>Habituellement, les métiers disponibles dans une ville sont contrôlés par d’autres options, par exemple le mode Chaman. Avec cette option, vous pouvez remplacer les paramètres automatiques et activer ou désactiver manuellement les métiers à la place.</target>
       </segment>
     </unit>
     <unit id="iLGm469" name="Individuelle Konfiguration">
       <notes>
         <note category="german">Individuelle Konfiguration</note>
         <note category="from">twig:///templates/ajax/ghost/create_town.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Individuelle Konfiguration</source>
-        <target>Individuelle Konfiguration</target>
+        <target>Configuration individuelle</target>
       </segment>
     </unit>
     <unit id="TfcJ9Mi" name="Verfügbare Konstruktionen">
       <notes>
         <note category="german">Verfügbare Konstruktionen</note>
         <note category="from">twig:///templates/ajax/ghost/create_town.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Verfügbare Konstruktionen</source>
-        <target>Verfügbare Konstruktionen</target>
+        <target>Chantiers disponibles</target>
       </segment>
     </unit>
     <unit id="RkbjKTP">
       <notes>
         <note category="german">Üblicherweise werden die verfügbaren Konstruktionen in einer Stadt durch andere Optionen gesteuert, zum Beispiel den Stadt-Typ. Mit dieser Option kannst du die automatischen Einstellungen ausser Kraft setzen und die Konstruktionen stattdessen manuell konfigurieren.</note>
         <note category="from">twig:///templates/ajax/ghost/create_town.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Üblicherweise werden die verfügbaren Konstruktionen in einer Stadt durch andere Optionen gesteuert, zum Beispiel den Stadt-Typ. Mit dieser Option kannst du die automatischen Einstellungen ausser Kraft setzen und die Konstruktionen stattdessen manuell konfigurieren.</source>
-        <target>Üblicherweise werden die verfügbaren Konstruktionen in einer Stadt durch andere Optionen gesteuert, zum Beispiel den Stadt-Typ. Mit dieser Option kannst du die automatischen Einstellungen ausser Kraft setzen und die Konstruktionen stattdessen manuell konfigurieren.</target>
+        <target>Habituellement, les chantiers disponibles dans une ville sont contrôlés par d’autres options, par exemple le type de ville. Avec cette option, vous pouvez remplacer les paramètres automatiques et configurer les chantiers manuellement à la place.</target>
       </segment>
     </unit>
   </file>
