--- a/translations/global+intl-icu.de.xlf
+++ b/translations/global+intl-icu.de.xlf
@@ -3999,5 +3999,14 @@
         <target>Umfrage starten</target>
       </segment>
     </unit>
+    <unit id="CHq_sLA" name="Alles als gelesen markieren">
+      <notes>
+        <note category="from">twig:///templates/ajax/forum/list.html.twig</note>
+      </notes>
+      <segment>
+        <source>Alles als gelesen markieren</source>
+        <target>Alles als gelesen markieren</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
