--- a/translations/global+intl-icu.en.xlf
+++ b/translations/global+intl-icu.en.xlf
@@ -4346,5 +4346,15 @@
         <target>Take the survey</target>
       </segment>
     </unit>
+    <unit id="CHq_sLA" name="Alles als gelesen markieren">
+      <notes>
+        <note category="german">Alles als gelesen markieren</note>
+        <note category="from">twig:///templates/ajax/forum/list.html.twig</note>
+      </notes>
+      <segment>
+        <source>Alles als gelesen markieren</source>
+        <target>Mark all as read</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
