--- a/translations/global+intl-icu.es.xlf
+++ b/translations/global+intl-icu.es.xlf
@@ -4312,5 +4312,16 @@
         <target>Iniciar encuesta</target>
       </segment>
     </unit>
+    <unit id="CHq_sLA" name="Alles als gelesen markieren">
+      <notes>
+        <note category="german">Alles als gelesen markieren</note>
+        <note category="from">twig:///templates/ajax/forum/list.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Alles als gelesen markieren</source>
+        <target>Alles als gelesen markieren</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
