--- a/translations/global+intl-icu.de.xlf
+++ b/translations/global+intl-icu.de.xlf
@@ -4008,5 +4008,14 @@
         <target>Alles als gelesen markieren</target>
       </segment>
     </unit>
+    <unit id="rZ3RgyU" name="Weltforum">
+      <notes>
+        <note category="from">twig:///templates/ajax/forum/list.html.twig</note>
+      </notes>
+      <segment>
+        <source>Weltforum</source>
+        <target>Weltforum</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
