--- a/translations/global+intl-icu.en.xlf
+++ b/translations/global+intl-icu.en.xlf
@@ -4356,5 +4356,15 @@
         <target>Mark all as read</target>
       </segment>
     </unit>
+    <unit id="rZ3RgyU" name="Weltforum">
+      <notes>
+        <note category="german">Weltforum</note>
+        <note category="from">twig:///templates/ajax/forum/list.html.twig</note>
+      </notes>
+      <segment>
+        <source>Weltforum</source>
+        <target>World Forum</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
