--- a/translations/global+intl-icu.es.xlf
+++ b/translations/global+intl-icu.es.xlf
@@ -4323,5 +4323,15 @@
         <target>Alles als gelesen markieren</target>
       </segment>
     </unit>
+    <unit id="rZ3RgyU" name="Weltforum">
+      <notes>
+        <note category="german">Weltforum</note>
+        <note category="from">twig:///templates/ajax/forum/list.html.twig</note>
+      </notes>
+      <segment>
+        <source>Weltforum</source>
+        <target>Foro Mundial</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
