--- a/translations/global+intl-icu.fr.xlf
+++ b/translations/global+intl-icu.fr.xlf
@@ -4337,5 +4337,16 @@
         <target>Alles als gelesen markieren</target>
       </segment>
     </unit>
+    <unit id="rZ3RgyU" name="Weltforum">
+      <notes>
+        <note category="german">Weltforum</note>
+        <note category="from">twig:///templates/ajax/forum/list.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Weltforum</source>
+        <target>Forum Monde</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
