--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -4794,7 +4794,7 @@
       </notes>
       <segment>
         <source>Deine Flagge</source>
-        <target>Votre drapeau</target>
+        <target>Mon drapeau</target>
       </segment>
     </unit>
     <unit id="gQDPOVU" name="Diese Stadt hat folgende Einschränkungen:">
