--- a/translations/global+intl-icu.es.xlf
+++ b/translations/global+intl-icu.es.xlf
@@ -4320,7 +4320,7 @@
       </notes>
       <segment>
         <source>Alles als gelesen markieren</source>
-        <target>Alles als gelesen markieren</target>
+        <target>Marcar todo como leído</target>
       </segment>
     </unit>
     <unit id="rZ3RgyU" name="Weltforum">
