--- a/translations/ghost+intl-icu.es.xlf
+++ b/translations/ghost+intl-icu.es.xlf
@@ -1850,44 +1850,44 @@
       <notes>
         <note category="german">Üblicherweise werden die verfügbaren Berufe in einer Stadt durch andere Optionen gesteuert, zum Beispiel den Schamanen-Modus. Mit dieser Option kannst du die automatischen Einstellungen ausser Kraft setzen und die Berufe stattdessen manuell ein- oder ausschalten.</note>
         <note category="from">twig:///templates/ajax/ghost/create_town.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Üblicherweise werden die verfügbaren Berufe in einer Stadt durch andere Optionen gesteuert, zum Beispiel den Schamanen-Modus. Mit dieser Option kannst du die automatischen Einstellungen ausser Kraft setzen und die Berufe stattdessen manuell ein- oder ausschalten.</source>
-        <target>Üblicherweise werden die verfügbaren Berufe in einer Stadt durch andere Optionen gesteuert, zum Beispiel den Schamanen-Modus. Mit dieser Option kannst du die automatischen Einstellungen ausser Kraft setzen und die Berufe stattdessen manuell ein- oder ausschalten.</target>
+        <target>Normalmente, los oficios disponibles para un pueblo se controlan desde otras opciones, como el tipo de chamán. Con esta opción puedes sobrescribir la configuración automática y activar o desactivar los oficios manualmente.</target>
       </segment>
     </unit>
     <unit id="iLGm469" name="Individuelle Konfiguration">
       <notes>
         <note category="german">Individuelle Konfiguration</note>
         <note category="from">twig:///templates/ajax/ghost/create_town.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Individuelle Konfiguration</source>
-        <target>Individuelle Konfiguration</target>
+        <target>Configuración individual</target>
       </segment>
     </unit>
     <unit id="TfcJ9Mi" name="Verfügbare Konstruktionen">
       <notes>
         <note category="german">Verfügbare Konstruktionen</note>
         <note category="from">twig:///templates/ajax/ghost/create_town.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Verfügbare Konstruktionen</source>
-        <target>Verfügbare Konstruktionen</target>
+        <target>Construcciones disponibles</target>
       </segment>
     </unit>
     <unit id="RkbjKTP">
       <notes>
         <note category="german">Üblicherweise werden die verfügbaren Konstruktionen in einer Stadt durch andere Optionen gesteuert, zum Beispiel den Stadt-Typ. Mit dieser Option kannst du die automatischen Einstellungen ausser Kraft setzen und die Konstruktionen stattdessen manuell konfigurieren.</note>
         <note category="from">twig:///templates/ajax/ghost/create_town.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Üblicherweise werden die verfügbaren Konstruktionen in einer Stadt durch andere Optionen gesteuert, zum Beispiel den Stadt-Typ. Mit dieser Option kannst du die automatischen Einstellungen ausser Kraft setzen und die Konstruktionen stattdessen manuell konfigurieren.</source>
-        <target>Üblicherweise werden die verfügbaren Konstruktionen in einer Stadt durch andere Optionen gesteuert, zum Beispiel den Stadt-Typ. Mit dieser Option kannst du die automatischen Einstellungen ausser Kraft setzen und die Konstruktionen stattdessen manuell konfigurieren.</target>
+        <target>Normalmente, las construcciones disponibles para un pueblo se controlan desde otras opciones, como el tipo de Pueblo. Con esta opción puedes sobrescribir la configuración automática y configurar las construcciones manualmente.</target>
       </segment>
     </unit>
   </file>
